--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -5,7 +5,7 @@
     <form method="post" >
         {% csrf_token %}
       <div class="group-inputs" >
-          <h5><strong>{{ msg }}</strong></h5>
+          <h5><strong style="color: red">{{ msg }}</strong></h5>
             <div class="account input-wrapper form-group">
              <label><strong>用户名</strong></label>
                 <p >{{ obj.user }}{{ obj.errors.user.0 }}</p></div>
