--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.12);
     transition: all 0.2s ease-in-out 0s;
     width: 66px;}
-	
+
 .navbar-inverse .navbar-nav > li > a {
     color: #efeff3;
 }
@@ -80,10 +80,10 @@ button, input, select, textarea {
     margin: 0;
 }
 </style>
-
 <link rel="shortcut icon" href="" type="image/x-icon">
 <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
+      <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
   </head>
   <body>
 <div class="navbar navbar-inverse" style="background-color: steelblue; color: #ffffff;" role="navigation">
@@ -95,19 +95,16 @@ button, input, select, textarea {
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" style= "color: #ffffff;" href="/">知乎</a>
+            <a class="navbar-brand" style= "color: #ffffff;" href="{% url 'home' %}">知乎</a>
         </div>
-
         <div class="navbar-collapse collapse">
-
 			<form class="zu-top-search" action="#" method="post" name="search">
-
 				<div class="">
 				<input type="text" maxlength="100" value="" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-activedescendant="AutoComplet-11259-5767--1" id="Popover-11259-52070-toggle" aria-haspopup="true" aria-owns="Popover-11259-52070-content" class="Input" placeholder="搜索你感兴趣的内容…" data-reactid="23">
 				</div>
 			</form>
 			<ul class="nav navbar-nav">
-                <li><a href="/">首页</a></li>
+                <li><a href="{% url 'home' %}">首页</a></li>
                 <li><a href="#">话题</a></li>
 				<li><a href="#">发现</a></li>
             </ul>
@@ -122,7 +119,7 @@ button, input, select, textarea {
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href=""></a></li>
-                        <li><a href="">我的主页</a></li>
+                        <li><a href="{% url 'user'  username=request.session.username %}">我的主页</a></li>
                         <li><a href="{% url 'change_password' %}">修改密码</a></li>
                         <li><a href="">改变邮箱</a></li>
                         <li><a href="{% url 'logout' %}">登出</a></li>
@@ -137,8 +134,9 @@ button, input, select, textarea {
     
 {% block content %}
 <div class="container">
+<div class="col-md-9">{% block page_content %}{% endblock %}</div>
+<div class="col-md-3">{% block right %}{% endblock %}</div>
 
-    {% block page_content %}{% endblock %}
 </div>
 {% endblock %}
 
