--- a/templates/index.html
+++ b/templates/index.html
@@ -1,57 +1,56 @@
 {% extends "base.html" %}
 {% block page_content %}
     <div class="TopstoryHeader" style="   display: flex;-webkit-box-pack: justify;-ms-flex-pack: justify;justify-content: space-between;line-height: 58px;padding: 0 20px;"><div class="TopstoryHeader-nav">
-        <button class="Button QuestionAskButton TopstoryHeader-navItem Button--plain" type="button" style="    transition: color .2s ease-in;font-size: 16px;color: #262626;height: auto; padding: 0;line-height: inherit;background-color: transparent;border: none;border-radius: 0;">
-           <!-- react-text: 1419 -->提问<!-- /react-text --><!-- react-empty: 1441 -->
-        </button>
-        <a href="/" target="_blank" title="" class="TopstoryHeader-navItem" style="margin-left: 40px;transition: color .2s ease-in;
-    font-size: 16px;
-    color: #262626;">回答</a>
-        <a href=""  title="写文章" class="TopstoryHeader-navItem TopstoryHeader-navItemArticle" style="margin-left: 40px;">
+        <a href="#"  title="提问" class="TopstoryHeader-navItem TopstoryHeader-navItemArticle" style="margin-left: 40px;transition: color .2s ease-in; font-size: 16px;">提问</a>
+        <a href="#"  title="回答" class="TopstoryHeader-navItem TopstoryHeader-navItemArticle" style="margin-left: 40px;transition: color .2s ease-in; font-size: 16px;">回答</a>
+        <a href="#"  title="写文章" class="TopstoryHeader-navItem TopstoryHeader-navItemArticle " style="margin-left: 40px; color .2s ease-in;">
             写文章</a>
         </div>
-        <a class="TopstoryHeader-rightItem" href="" target="" title="草稿">草稿</a></div>
+        <a class="TopstoryHeader-rightItem" href="#" target="" title="草稿">草稿</a></div>
 <div class="page-header">
-
 </div>
-
 <div class="answer-tabs">
+    {%for list in huati_list%}
     <ul class="nav nav-tabs">
-
+        <div class="Feed" data-za-module="FeedItem"  >
+    <div class="Feed-meta" >来自话题: {{list.}}</div></div></div><div class="Feed-title" ><div class="Feed-meta" >
+    <span class="Feed-meta-item" ><span ><span ><span class="UserLink">
+        <div class="Popover" >
+<div  aria-haspopup="true" >
+<span class="Feed-meta-item">2小时前</span></div></div>
+<div class="ContentItem AnswerItem" data-zop=" itemprop="answer" >
+    <h2 class="ContentItem-title" data-reactid="105">
+        <div itemprop="zhihu:question" data-reactid="106">
+<a target="_blank" data-za-detail-view-element_name="Title" href="#" >2017 年双 11 有哪些值得购买的商品？</a></div></h2>
+<div class="ContentItem-meta" data-reactid="110"><div class="AnswerItem-meta" data-reactid="111" style=''>
+   去年的双十一，我不管三七二十一只要喜欢就直接加购物车买买买，也不算商品是否便宜了还是临时加价了，结果其实被坑了不少。明年我马上要出国了，我妈总说要我有点儿省钱的意识，所以相比去年的双十一，今年的双十一…
+</span><a href=''>阅读全文</a></div>
+   <div class="ContentItem-actions" style="height: 52px;
+padding: 0 20px;margin: 4px -20px -8px;color: #555;background: #fff;
+clear: both;">  
+<a class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel" style="">
+    <!-- react-text: 282 -->​<!-- /react-text --><svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em" data-reactid="283"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd" ></path></svg>19 条评论</a>
+<div class="Popover ShareMenu ContentItem-action" ><div class="" id="Popover-1358-34050-toggle" ></div></div><a class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel"  >
+<svg class="Zi Zi--Star Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em" data-reactid="412"><path d="M5.515 19.64l.918-5.355-3.89-3.792c-.926-.902-.639-1.784.64-1.97L8.56 7.74l2.404-4.871c.572-1.16 1.5-1.16 2.072 0L15.44 7.74l5.377.782c1.28.186 1.566 1.068.64 1.97l-3.89 3.793.918 5.354c.219 1.274-.532 1.82-1.676 1.218L12 18.33l-4.808 2.528c-1.145.602-1.896.056-1.677-1.218z" fill-rule="evenodd" data-reactid="413"></path></svg>收藏</a></div></div></div></div>
+{%endfor%}
     </ul>
-
 </div>
-{% if pagination %}
-<div class="pagination">
-
-</div>
-{% endif %}
 {% endblock %}
 {% block right %}
-    <div class="Card" data-reactid="1290" style="argin-bottom: 10px; background: #fff;overflow: hidden; border-radius: 2px;-webkit-box-shadow: 0 1px 3px rgba(0,0,0,.1);box-shadow: 0 1px 3px rgba(0,0,0,.1);-webkit-box-sizing: border-box;
-    box-sizing: border-box;">
-        <ul class="TopstorySideBar-navList" data-reactid="1291" style="display: block;list-style-type: disc;-webkit-margin-before: 1em;-webkit-margin-after: 1em;-webkit-margin-start: 0px;-webkit-margin-end: 0px;
+    <div class="Card"  style="argin-bottom: 10px; background: #fff;overflow: hidden; border-radius: 2px;-webkit-box-shadow: 0 1px 3px rgba(0,0,0,.1);box-shadow: 0 1px 3px rgba(0,0,0,.1);-webkit-box-sizing: border-box;box-sizing: border-box;">
+<ul class="TopstorySideBar-navList"  style="display: block;list-style-type: disc;-webkit-margin-before: 1em;-webkit-margin-after: 1em;-webkit-margin-start: 0px;-webkit-margin-end: 0px;
     -webkit-padding-start: 40px;">
-            <li class="TopstorySideBar-navItem TopstorySideBar-starItem" data-reactid="1292" style=" list-style-type: none;   display: list-item;text-align: -webkit-match-parent;width: 100%;padding: 8px 0;">
-                <a class="Button TopstorySideBar-navLink Button--plain" href="" target="_blank" type="button" data-reactid="1293">
-                    <svg class="Zi Zi--Star TopstorySideBar-navIcon" fill="currentColor" viewBox="0 0 24 24" width="18" height="18" data-reactid="1294">
-                        <path d="M5.515 19.64l.918-5.355-3.89-3.792c-.926-.902-.639-1.784.64-1.97L8.56 7.74l2.404-4.871c.572-1.16 1.5-1.16 2.072 0L15.44 7.74l5.377.782c1.28.186 1.566 1.068.64 1.97l-3.89 3.793.918 5.354c.219 1.274-.532 1.82-1.676 1.218L12 18.33l-4.808 2.528c-1.145.602-1.896.056-1.677-1.218z" fill-rule="evenodd" data-reactid="1295"></path></svg>
-                    <span class="TopstorySideBar-navText" data-reactid="1296" >我的收藏</span></a></li>
-            <li class="TopstorySideBar-navItem TopstorySideBar-questionListItem" data-reactid="1297" style="list-style-type: none;" >
-                <a class="Button TopstorySideBar-navLink Button--plain" target="_blank" type="button" data-reactid="1298" href="#">
-                    <svg class="Zi Zi--HelpBubble TopstorySideBar-navIcon" fill="currentColor" viewBox="0 0 24 24" width="18" height="18" data-reactid="1299">
-                        <path d="M5.74 4h12.52c.961 0 1.74.775 1.74 1.73V16.27c0 .955-.779 1.73-1.74 1.73h-3.825l-1.658 2.044a1 1 0 0 1-1.554 0l-1.658-2.044H5.74C4.78 18 4 17.224 4 16.27V5.73C4 4.775 4.778 4 5.74 4zM12 16a.976.976 0 0 0 .705-.287.951.951 0 0 0 .295-.712.954.954 0 0 0-.295-.714A.976.976 0 0 0 12 14a.962.962 0 0 0-.705.295A.961.961 0 0 0 11 15c0 .284.098.522.295.713A.975.975 0 0 0 12 16zm1.278-4.924a36.81 36.81 0 0 0 1.023-.975c.19-.193.354-.422.492-.688.138-.266.207-.575.207-.928 0-.448-.12-.864-.363-1.246a2.517 2.517 0 0 0-1.029-.906C13.164 6.111 12.652 6 12.072 6c-.624 0-1.17.133-1.638.399-.468.265-.824.6-1.068 1.005-.244.405-.366.804-.366 1.2 0 .19.077.368.231.531a.747.747 0 0 0 .567.246c.38 0 .638-.234.774-.703.144-.449.32-.788.528-1.019.208-.23.532-.345.972-.345.376 0 .683.114.921.342.238.229.357.51.357.841 0 .17-.039.328-.117.473a1.782 1.782 0 0 1-.288.396c-.114.118-.3.294-.555.526a9.71 9.71 0 0 0-.696.688c-.172.194-.31.418-.414.673a2.391 2.391 0 0 0-.156.906c0 .278.071.488.213.63a.716.716 0 0 0 .525.211c.4 0 .638-.216.714-.648.044-.203.077-.345.099-.426.022-.081.053-.162.093-.243.04-.081.101-.17.183-.268.082-.098.191-.21.327-.34z" fill-rule="evenodd" data-reactid="1300"></path></svg>
-                    <span class="TopstorySideBar-navText" data-reactid="1301">我关注的问题</span>
+    <li class="TopstorySideBar-navItem TopstorySideBar-starItem"  style=" list-style-type: none;   display: list-item;text-align:-webkit-match-parent;width: 100%;padding: 8px 0;">
+        <a class="Button TopstorySideBar-navLink Button--plain" href="" target="_blank" >
+    <span class="TopstorySideBar-navText" >我的收藏</span></a></li>
+    <li class="TopstorySideBar-navItem TopstorySideBar-questionListItem" style="list-style-type: none;" >
+     <a class="Button TopstorySideBar-navLink Button--plain" target="_blank" type="button"  href="#">
+        <span class="TopstorySideBar-navText" >我关注的问题</span>
                     <span class="TopstorySideBar-navNumber"></span></a></li>
-            <li class="TopstorySideBar-navItem TopstorySideBar-inviteItem" data-reactid="1302" style="list-style-type: none;">
-                <a class="Button TopstorySideBar-navLink Button--plain" href="/#" target="_blank" type="button" data-reactid="1303">
-                    <svg class="Zi Zi--Invite TopstorySideBar-navIcon" fill="currentColor" viewBox="0 0 24 24" width="18" height="18" data-reactid="1304">
-                        <path d="M17.53 21c-2.47 0-4.471-2.035-4.471-4.545s2.001-4.544 4.47-4.544C20 11.911 22 13.946 22 16.455 22 18.965 19.998 21 17.53 21zm.555-5.116s-.005-2.04 0-2.272c-.014-.753-1.13-.753-1.117 0-.014.724 0 2.272 0 2.272h-2.233c-.745.003-.745 1.14 0 1.14s2.233-.004 2.233-.004v2.272c0 .765 1.12.765 1.117 0-.004-.764 0-2.272 0-2.272s1.488.004 2.237.004c.748 0 .748-1.137-.004-1.14h-2.233zm-5.778-3.074a5.692 5.692 0 0 0-.561 6.936H8.408c-4.514 0-5.32-.154-5.408-1.57 0-2.45 2.42-5.407 5.408-5.407h3.49c.14 0 .271.031.409.041zm-2.33-1.437a4.187 4.187 0 1 1 0-8.373 4.187 4.187 0 0 1 0 8.373z" fill-rule="evenodd" data-reactid="1305"></path></svg>
-                    <span class="TopstorySideBar-navText" data-reactid="1306">我的邀请</span></a></li>
-
+    <li class="TopstorySideBar-navItem TopstorySideBar-inviteItem"  style="list-style-type: none;">
+     <a class="Button TopstorySideBar-navLink Button--plain" href="/#" target="_blank" type="button" >
+        <span class="TopstorySideBar-navText" >我的邀请</span></a></li>
     </ul></div>
 {% endblock %}
-
 {% block scripts %}
-
 {% endblock %}
