--- a/templates/auth/user.html
+++ b/templates/auth/user.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block page_content %}
      <h1>{{user.username }}</h1>
 <div class="page-header">
@@ -10,9 +9,8 @@
         <p>注册日期 :{{ user.date_joined |date:"Y年m月d日 H时i分" }}</p>
     {% load tz %}
         <p>最后使用:{{ user.last_login | date:"Y年m月d日 H时i分" }}</p>
-        <p> 提问数量：</p>
-        <p>回答数量：</p>
-        <p> 评论数量：</p>
+        <p> 话题数量：{{ huat.count }}</p>
+        <p> 评论数量：{{ comment.count }}</p>
         {% if user.username == request.session.username %}
         <p>     <a class="btn btn-default" href="{% url  'userdata' %}">修改信息</a>
             {% else %}
@@ -28,14 +26,19 @@
     <div class="ProfileMain-header" style="display: block;">
         <ul role="tablist" class="Tabs ProfileMain-tabs" style="border-bottom: 1px solid #f0f2f7;">
             <li role="tab" class="Tabs-item Tabs-item--noMeta" aria-controls="Profile-activities" style="display: inline-block;padding: 0 20px;">
-                <a class="Tabs-link is-active" href="#">动态</a></li>
-            <li role="tab" class="Tabs-item" aria-controls="Profile-answers"style="display: inline-block;padding: 0 20px;"><a class="Tabs-link" href="#">
-                <!-- react-text: 1255 -->回答<!-- /react-text --><span class="Tabs-meta"></span></a></li>
-            <li role="tab" class="Tabs-item" aria-controls="Profile-asks" style="display: inline-block;padding: 0 20px;">
-                <a class="Tabs-link" href="#"><!-- react-text: 1259 -->提问<!-- /react-text --><span class="Tabs-meta"></span></a></li>
-            <li role="tab" class="Tabs-item" aria-controls="Profile-posts" style="display: inline-block;padding: 0 20px;">
-                <a class="Tabs-link" href="#"><!-- react-text: 1263 -->文章<!-- /react-text --><span class="Tabs-meta"></span></a></li>
+               个人动态</li>
         </ul></div>
+    <div style="margin-top: 10px;margin-left: 20px">
+    {% for i in note %}
+        {% if  i.desc %}
+        <p style="margin-top: 10px"><a href="{% url 'user'  username=i.user.username %}">{{ i.user.username }}</a><span style="margin-left: 5px">于{{ i.time|date:'Y-m-d H:i' }}发表</span> <span style="margin-left: 5px"></span>{{ i.title }} </p>
+            {{ i.desc }}
+            {% else %}
+            <p style="margin-top: 10px"><a href="{% url 'user'  username=i.user.username %}">{{ i.user.username }}</a><span style="margin-left: 5px">于{{ i.time|date:'Y-m-d H:i' }}对</span> <span style="margin-left: 5px"></span>{{ i.huati.title}}发表评论：</p>
+            {{ i.comment }}
+        {% endif %}
+    {% endfor %}
+    </div>
 {% endblock %}
 {% block right %}
     <div class="Card FollowshipCard" style="font-size: 14px;    margin-bottom: 10px;background: #fff;overflow: hidden; border-radius: 2px;-webkit-box-shadow: 0 1px 3px rgba(0,0,0,.1);box-shadow: 0 1px 3px rgba(0,0,0,.1);-webkit-box-sizing: border-box;margin-top: 100px;box-sizing: border-box;">
@@ -53,7 +56,12 @@
   <div class="Profile-lightList" style="font-size: 14px;">
       <p style="    color: inherit;text-decoration: none;    align-items: center;height: 46px;font-size: 14px;border-top: 1px solid #e6e6e6;padding-left: 5px;">
           <span class="Profile-lightItemName"><strong>关注的话题</strong></span>
-          <span class="Profile-lightItemValue"></span></p>
+          <span class="Profile-lightItemValue">
+
+          </span>{% for use in user.get_guanzhu %}
+          {% for us in use %}
+              <span><a>{{ us.title }}</a></span>{% endfor %}
+              {% endfor %}</p>
        <p style="    color: inherit;text-decoration: none;    align-items: center;height: 46px;font-size: 14px;border-top: 1px solid #e6e6e6;padding-left: 5px;">
           <span class="Profile-lightItemName"><strong>关注的问题</strong></span>
            <span class="Profile-lightItemValue"></span>
