--- a/templates/base.html
+++ b/templates/base.html
@@ -103,13 +103,11 @@ button, input, select, textarea {
 			</form>
 			<ul class="nav navbar-nav">
                 <li><a href="{% url 'home' %}">首页</a></li>
-                <li><a href="#">话题</a></li>
-				<li><a href="#">发现</a></li>
+                <li><a href="{% url 'huatidetile' %}">话题</a></li>
             </ul>
 			<ul class="nav navbar-nav navbar-right">
     {% if request.session.username  %}
                 <li><a href="#">消息</a></li>
-                <li><a href="#">私信</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="#">
