--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,11 @@ button, input, select, textarea {
             </ul>
 			<ul class="nav navbar-nav navbar-right">
     {% if request.session.username  %}
-                <li><a href="#">消息</a></li>
+        {% if new_message == 0 %}
+                <li><a href="{% url 'readmessage' %}">消息</a></li>
+            {% else %}
+            <li><a href="{% url 'readmessage' %}">消息{{ new_message}}</a></li>
+            {% endif %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="#">
