--- a/templates/huati/onedetail.html
+++ b/templates/huati/onedetail.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 {% block page_content %}
-    <h2></h2>
+    <h2>话题：{{ name }}</h2>
+    <p>---------------------------------------------------------------------------------</p>
     <div style="margin-top: 20px">
+    <h3>动态:</h3>
+
       {% for hu in huati  %}
           {%  if hu.liebie == '提问' %}
-      <p style="margin-top: 10px"><a href="{% url 'questiondetile' id=hu.id %}">{{ hu.title}}</a></p>
-          <a href="{% url 'user' username=hu.user.username%}">{{ hu.user.username }}</a>
+      <p style="margin-top: 15px"><a href="{% url 'questiondetile' id=hu.id %}">{{ hu.title}}</a></p>
+          作者：<a href="{% url 'user' username=hu.user.username%}">{{ hu.user.username }}</a>
               <span style="margin-left: 5px">{{ hu.user.info }}</span>
           <p style="margin-left: 2px;margin-top: 5px">{{ hu.desc }}</p>
           <a>关注问题</a>
